	* pgmm: fixed bugs affecting the instrument matrix in the following cases:
			  * gmm instruments are collapsed and restricted in lag length;
			  * first lags are used as gmm instruments;
			  * gmm instruments are collapsed in system GMM;
			  * gmm instruments are restricted in lag length in system GMM.
	* punbalancedness: data frame interface gains 'index' argument.
	* within_intercept: new function to calculate an overall intercept along its standard error for FE models
	                a la Stata (and Gretl), accepts argument '.vcov' for user defined vcov
	* added help topic on package as a whole (?`plm-package`) for sake of completeness
	* summary.plm: * argument '.vcov' can also be a function (before, only only matrix was possible)
	               * internal: the furnished vcov is saved in the summary.plm object in object$rvcov
	                           (vcov function name in attr(object$rvcov, which="rvcov.name")
	* Ftest: * gained '.vcov' argument, which enables robust F test and chi-sq test
	           [robust versions not yet weaved in summary.plm]
	         * now exported and has documentation (.Rd file)
	         * returned htest object has vcov's name in 'method' element (if vcov was supplied)
	* (internal) vcovXX functions: furnished vcovs gain attribute "cluster" which give info about clustering,
	                               e.g. "group" or "time"
	* fixef: gains new argument '.vcov'
	
Changes since version 1.5-17

	* lagt.pseries: new method respecting "content" of time periods [not yet exported due to testing]
	* is.pconsecutive: default method exported so it can be used for arbitrary vectors
	
Changes since version 1.5-18

  * pcdtest: small efficiency enhancement (calc only lower.tri of rhos)
  * pos.index (internal, not exported): new func to determine column numbers of index vars in pdata.frame
  * cosmetics: some extraction/subsetting functions doubled 'pseries' in the class of returned value (fixed now)
	