@@ -34,3 +34,34 @@ df <- as.data.frame(mod$model)
 class(df)
 class(df$inv) # 'pseries' apperead two before rev. 242
 if (!(length(class(df$inv)) == 2 && class(df$inv) == c("pseries", "numeric"))) warning("class(es) are wrong!")
+
+
+
+# pdata.frame extraction by [.pdata.frame uses data.frame's extraction ([.data.frame) which drops the "pindex" class for the index
+# test if it is still present
+class(attr(pGrunfeld, "index"))
+class(attr(pGrunfeld[1, ], "index"))
+if(!all(class(attr(pGrunfeld[1, ], "index")) == c("pindex", "data.frame")))
+  stop("class \"pindex\" missing for index after subsetting a pdata.frame")
+
+# for pseries
+class(attr(pGrunfeld$inv, "index"))
+class(attr(pGrunfeld[1, ]$inv, "index"))
+if(!all(class(attr(pGrunfeld[1, ]$inv, "index")) == c("pindex", "data.frame")))
+  stop("class \"pindex\" missing for index after subsetting a pseries")
+
+
+
+## pdata.frame: Check order of attributes after subsetting [R's "[.data.frame" does not preserve order of attributes]
+attrib_names_before_subsetting_pdataframe <- names(attributes(pGrunfeld))
+attrib_names_after_subsetting_pdataframe  <- names(attributes(pGrunfeld[1:2, ]))
+if (!isTRUE(all.equal(attrib_names_before_subsetting_pdataframe, attrib_names_after_subsetting_pdataframe)))
+  stop("order of attributes has changed after subsetting a pdata.frame")
+
+## pseries: pdata.frame: Check order of attributes after subsetting [R's "[.data.frame" does not preserve order of attributes]
+attrib_names_before_subsetting_pseries <- names(attributes(pGrunfeld$inv))
+attrib_names_after_subsetting_pseries  <- names(attributes(pGrunfeld[1:2, ]$inv))
+if (!isTRUE(all.equal(attrib_names_before_subsetting_pseries, attrib_names_after_subsetting_pseries)))
+  stop("order of attributes has changed after subsetting a pseries")
+
+
