@@ -639,5 +639,7 @@ Changes since version 1.5-18
 
   * pcdtest: small efficiency enhancement (calc only lower.tri of rhos)
   * pos.index (internal, not exported): new func to determine column numbers of index vars in pdata.frame
-  * cosmetics: some extraction/subsetting functions doubled 'pseries' in the class of returned value (fixed now)
+  * cosmetics: * some extraction/subsetting functions doubled 'pseries' in the class of returned value (fixed now)
+               * extraction methods for pdata.frame and pseries now preserve order
+               * class "pindex" for attribute index not lost anymore after subsetting a pdata.frame
 	
